fixed some issues with the print, made text slightly larger, removed scrollbars on code and made loading text sans serif

--- a/resources/cs.css
+++ b/resources/cs.css
@@ -67,7 +67,7 @@ body {
 .reveal .col-left h1, .reveal .col-left h2, .reveal .col-left h3, .reveal .col-left h4, .reveal .col-left h5, .reveal .col-left h6, .reveal .col-left p {
     color: #fff;
     text-align: left;
-    line-height: 1;
+    line-height: 1.2;
 }
 
 .reveal .col-left h2 {
@@ -89,8 +89,14 @@ body {
     font-size: 0.525em;
     margin-top:0;
 }
+.reveal .col-left li {
+    font-size: 0.525em;
+    margin-top:0;
+}
 
+.reveal  .slide-background {
 
+}
 .reveal > .backgrounds {
     background: url('footer_pattern.svg') fixed repeat-x bottom center;
     background-size: contain;
@@ -99,16 +105,15 @@ body {
 .reveal > .backgrounds.first-slide {
     background: url('pattern.svg') fixed repeat-y left center;
     background-size: contain;
-
 }
-
-
-
 
 .reveal .slides > section > section {
     line-height: 1.3;
     font-weight: inherit;
     text-align: left;
+}
+#loading p {
+    font-family: "Open Sans", Helvetica, sans-serif;
 }
 
 /*********************************************
@@ -265,8 +270,8 @@ body {
     padding: 25px 5px;
     max-height: 400px;
     word-wrap: normal;
-    overflow: scroll;
-    font-size: 1.8em;
+    overflow: auto;
+    font-size: 2.3em;
     line-height: 1;
 }
 
@@ -441,6 +446,13 @@ body {
     justify-content: center;
 
 }
+.reveal #footer.printFooter{
+    background: url('footer_blue_pattern_logo.svg')  no-repeat bottom center;
+    background-size: cover;
+    height: 2.6em;
+    position: absolute;
+    bottom: 0;
+}
 
 .reveal #footer-right {
     position: absolute;
@@ -483,7 +495,7 @@ body {
     background: url('side_blue_pattern.svg') fixed repeat-y left center;
     background-size: contain;
     text-align: left;
-    padding: 10% 5% 0 5%;
+    padding: 6% 2% 0 4%;
     box-sizing: border-box;
     z-index: 4;
     height: 100vh;
@@ -527,9 +539,7 @@ body {
 }
 
 
-.reveal .slide-background.present {
-    height: 95vh;
-}
+
 
 .listing{
     background:#2841f9 url('pattern.svg') fixed repeat left center;
@@ -595,6 +605,10 @@ body {
     position: absolute;
     bottom: 0;
 }
+@media not all and (min-resolution:.001dpcm) { @supports (-webkit-appearance:none) and (stroke-color:transparent) {
+    .reveal .logo { max-width: 20%;}
+}
+}
 
 .reveal .controls  {
     transform:scale(0.8);
@@ -611,7 +625,6 @@ body {
         background-size: cover;
     }
     .reveal .slides #footer {
-
         height: 30%;
         position: absolute;
         bottom: -2%;
@@ -634,22 +647,25 @@ body {
     }
 
 
-
-
-
-
-
-
-
 @media screen and (-webkit-min-device-pixel-ratio: 0) { _::-webkit-full-page-media, _:future, :root ,  .reveal.first-slide #left-col {
     background-size: cover;
 } }
 
 
 
-
+.reveal .slide-background.present {
+    height: 94vh;
+}
 
 #loading { top: 50%; left: 45%; right: 50%; bottom: 50%; position: absolute; display: block; z-index: 99; margin: 0 auto;}
 #loading p {
     color:#2841f9;
+}
+
+.reveal .slides .pdf-page {
+    max-height: 727px;
+
+}
+.reveal .pdf-page .slide-background.present {
+    height: 100%;
 }
